--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <link rel="shortcut icon" href="/imagens/layer-group-solid.svg" type="image/x-icon" />
     <link rel="stylesheet" href="./estilos/style.css">
 </head>
 
