--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="shortcut icon" href="/imagens/layer-group-solid.png" type="image/x-icon" />
     <link rel="stylesheet" href="./estilos/style.css">
 </head>
 
@@ -14,8 +13,8 @@
     <header class="cabecalho">
         <nav class="cabecalho__menu">
             <a class="cabecalho__menu__link" href="index.html">Home</a>
-            <a class="cabecalho__menu__link" href="about.html">Sobre mim</a>
-            <a class="cabecalho__menu__link" href="story.html">Curriculum</a>
+            <a class="cabecalho__menu__link" href="about.html">About me</a>
+            <a class="cabecalho__menu__link" href="story.html">resume</a>
         </nav>
     </header>
     <main class="apresentacao">
