--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="/imagens/layer-group-solid.svg" type="image/x-icon" />
+    <link rel="shortcut icon" href="./imagens/pasta.png" type="image/x-icon" />
     <link rel="stylesheet" href="./estilos/style.css">
     <title>Sobre mim</title>
 </head>
@@ -14,8 +14,8 @@
     <header class="cabecalho">
         <nav class="cabecalho__menu">
             <a class="cabecalho__menu__link" href="index.html">Home</a>
-            <a class="cabecalho__menu__link" href="about.html">Sobre mim</a>
-            <a class="cabecalho__menu__link" href="story.html">Curriculum</a>
+            <a class="cabecalho__menu__link" href="about.html">About me</a>
+            <a class="cabecalho__menu__link" href="story.html">Resume</a>
         </nav>
     </header>
     <main class="apresentacao">
