--- a/story.html
+++ b/story.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./imagens/pasta.png" type="image/x-icon" />
     <link rel="stylesheet" href="./estilos/style.css">
     <title>Curriculum</title>
 </head>
@@ -11,8 +12,8 @@
     <header class="cabecalho">
         <nav class="cabecalho__menu">
             <a class="cabecalho__menu__link" href="index.html">Home</a>
-            <a class="cabecalho__menu__link" href="about.html">Sobre mim</a>
-            <a class="cabecalho__menu__link" href="story.html">Curriculum</a>
+            <a class="cabecalho__menu__link" href="about.html">About me</a>
+            <a class="cabecalho__menu__link" href="story.html">Resume</a>
         </nav>
     </header>
     <main class="apresentacao">
@@ -40,12 +41,12 @@
                 <h2 class="apresentacao__links__titulo"><strong
                     class="titulo-destaque">Outros Projetos:</strong></h2> 
                 <a class="apresentacao__links__navegacao" href="https://andrefulsao.github.io/Projeto_link/">
-                <img src="./imagens/link_correto.png" alt="Link">
+                <img src="./imagens/pasta.png" alt="Link">
                     Projeto link
                 </a>           
             </div>                                    
         </section>        
-        <img class="img_curriculum" src="./imagens/Curriculum.jpg" alt="Curriculum">
+        <img class="apresentacao__img" src="./imagens/Eu.png" alt="André Mendes Nunes">
     </main>
     <footer class="rodape">
         <p>Desenvolvido por André Mendes Nunes</p>
