--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav class="cabecalho__menu">
             <a class="cabecalho__menu__link" href="index.html">Home</a>
             <a class="cabecalho__menu__link" href="about.html">About me</a>
-            <a class="cabecalho__menu__link" href="story.html">resume</a>
+            <a class="cabecalho__menu__link" href="story.html">Resume</a>
         </nav>
     </header>
     <main class="apresentacao">
