ajuste de stylo e add navbar

--- a/about.html
+++ b/about.html
@@ -11,11 +11,19 @@
 </head>
 
 <body>
-    <header class="cabecalho">
+    <header class="cabecalho">              
         <nav class="cabecalho__menu">
-            <a class="cabecalho__menu__link" href="index.html">Home</a>
-            <a class="cabecalho__menu__link" href="about.html">About me</a>
-            <a class="cabecalho__menu__link" href="story.html">Resume</a>
+            <a class="logo" href="index.html">Bem-vindo</a>  
+            <div class="mobile-menu">
+                <div class="line1"></div>
+                <div class="line2"></div>
+                <div class="line3"></div>
+            </div>
+            <ul class="nav-list">  
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="about.html">Sobre</a></li>
+                <li><a href="story.html">Resumo</a></li>
+            </ul>  
         </nav>
     </header>
     <main class="apresentacao">
@@ -32,8 +40,9 @@
                 perferendis doloribus asperiores ipsum delis forum birol parela maxime infena. Excepteur sint occaecat
                 cupidatat non.</p>
         </section>
-        <img class="apresentacao__img" src="./imagens/Eu.png" alt="Foto da André Mendes Nunes">
+        <img class="apresentacao__img" src="./imagens/eu2.jpg" alt="Foto da André Mendes Nunes">
     </main>
+    <script src="./JS/mobile-navbar.js"></script>
     <footer class="rodape">
         <p>Desenvolvido por André Mendes Nunes</p>
     </footer>
