--- a/story.html
+++ b/story.html
@@ -9,11 +9,19 @@
     <title>Curriculum</title>
 </head>
 <body>
-    <header class="cabecalho">
+    <header class="cabecalho">              
         <nav class="cabecalho__menu">
-            <a class="cabecalho__menu__link" href="index.html">Home</a>
-            <a class="cabecalho__menu__link" href="about.html">About me</a>
-            <a class="cabecalho__menu__link" href="story.html">Resume</a>
+            <a class="logo" href="index.html">Bem-vindo</a>  
+            <div class="mobile-menu">
+                <div class="line1"></div>
+                <div class="line2"></div>
+                <div class="line3"></div>
+            </div>
+            <ul class="nav-list">  
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="about.html">Sobre</a></li>
+                <li><a href="story.html">Resumo</a></li>
+            </ul>  
         </nav>
     </header>
     <main class="apresentacao">
@@ -45,9 +53,10 @@
                     Projeto link
                 </a>           
             </div>                                    
-        </section>        
-        <img class="apresentacao__img" src="./imagens/Eu.png" alt="André Mendes Nunes">
+        </section> 
+        <img class="apresentacao__img" src="./imagens/eu2.jpg" alt="André Mendes Nunes">             
     </main>
+    <script src="./JS/mobile-navbar.js"></script>
     <footer class="rodape">
         <p>Desenvolvido por André Mendes Nunes</p>
     </footer>    
